--- a/index.html
+++ b/index.html
@@ -79,9 +79,42 @@
 			</div>
 		</div>
 		<div class="footer">
-			<div class="language-setting"></div>
-			<div class="logo-footer"></div>
-			<div class="footer-content"></div>
+			<div class="language-setting">
+				<div class="language"><span class="fas fa-globe-americas"></span><span>tiếng việt</span><span class="fas fa-caret-down"></span>
+					<div class="menu-language">
+					<ul>
+						<li>tiếng việt</li>
+						<li>deutsch</li>
+						<li>english</li>
+						<li>español</li>
+						<li>français</li>
+						<li>indonesia</li>
+					</ul>
+					<ul>
+						<li>japanese</li>
+						<li>korean</li>
+						<li>português</li>
+						<li>pусский</li>
+						<li>thailand</li>
+						<li>chinese</li>
+					</ul>
+				</div>
+				</div>
+			</div>
+			<div class="logo-footer"><img src="img/mihoyo.png"><img src="img/genshinfooter.png">
+				<div class="footer-content">
+					<div>
+						<span><a href="#">Chính Sách Về Quyền Riêng Tư</a></span>
+						<span><a href="#">Điều Khoản Dịch Vụ</a></span>
+					</div>
+					<div>
+						<span><a href="#">Giới Thiệu Công Ty</a></span>
+						<span><a href="#">Liên Hệ Chúng Tôi</a></span>
+					</div>
+					<div>Copyright© 2012-2020 miHoYo ALL RIGHTS RESERVED</div>
+					<div>"PlayStation Family Mark" and "PS4 logo" are registered trademarks or trademarks of Sony Interactive Entertainment Inc.</div>
+				</div>
+		</div>
 		</div>
 	</div>
 <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
